--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -66,7 +66,7 @@ header>p{
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
-    margin-bottom: 10px;
+    padding-bottom: 50px;
     text-shadow: 1px 1px 0px black;
 
 }
